--- a/css/loginstyle.css
+++ b/css/loginstyle.css
@@ -229,10 +229,10 @@ p {
     color: #064d43;
 }
 #login_username{
-    color: white;
+    color: rgba(0, 18, 13, 0.61);
 }
 #login_password{
-    color: white;
+    color: rgba(0, 18, 13, 0.61);
 }
 .my-lg-button{
     background-color: #00695c;
