CSS Changed, Carousel Images added, admin-home changed

--- a/css/homestyle.css
+++ b/css/homestyle.css
@@ -46,6 +46,7 @@ body{
 
 .background-theme{
 	background-image: url('../img/main-background.jfif');
+	background-attachment: fixed;
 }
 
 .background-theme h2{
